Completed 4i. Stretch, pretty much got it right, not the exact numbers but got the idea of to execute it correct.

--- a/Lesson 4 Exercises(Chrome DevTools , CSS Box Model)/Challenge Exercises/4h-4k.css
+++ b/Lesson 4 Exercises(Chrome DevTools , CSS Box Model)/Challenge Exercises/4h-4k.css
@@ -12,3 +12,19 @@
 .page-numbers{
   margin: 4px 4px;
 }
+
+/* 4i. Stretch */
+
+.stretch__button{
+  border: none;
+  background-color: rgb(18, 228, 18);
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  padding: 8px 12px;
+  cursor: pointer;
+  transition: padding 800ms ease;
+}
+
+.stretch__button:hover{
+  padding: 18px 36px;
+}
